--- a/G19Tastatur Applet/config.cfg
+++ b/G19Tastatur Applet/config.cfg
@@ -1,22 +1,52 @@
 ### CPU
 # Margins
-cpu_margin_top = 15
-cpu_margin_left = 5
+	cpu_margin_top = 15
+	cpu_margin_left = 5
 
 # Font
-cpu_font = Arial
+	cpu_font = Arial
 
 # Line color in RGB
-cpu_line_color_red   = 255
-cpu_line_color_green = 0
-cpu_line_color_blue  = 0
+	cpu_line_color_red   = 255
+	cpu_line_color_green = 0
+	cpu_line_color_blue  = 0
 
 # Border in RGB
-cpu_border_color_red   = 255
-cpu_border_color_green = 255
-cpu_border_color_blue  = 255
+	cpu_border_color_red   = 255
+	cpu_border_color_green = 255
+	cpu_border_color_blue  = 255
 
 # Text color in RGB
-cpu_text_color_red   = 255
-cpu_text_color_green = 0
-cpu_text_color_blue  = 0
+	cpu_text_color_red   = 255
+	cpu_text_color_green = 0
+	cpu_text_color_blue  = 0
+
+
+
+### RAM
+# Margins
+	ram_margin_top = 190
+	ram_margin_left = 5
+
+# Font
+	ram_font = Arial
+
+# Text color in RGB
+	ram_text_color_red   = 255
+	ram_text_color_green = 0
+	ram_text_color_blue  = 0
+
+# Line color in RGBA
+	ram_line_color_red   = 255
+	ram_line_color_green = 0
+	ram_line_color_blue  = 0
+
+	ram_line_seperator_color_red = 0
+	ram_line_seperator_color_green = 0
+	ram_line_seperator_color_blue = 0
+	ram_line_seperator_color_alpha = 0
+
+# Border in RGB
+	ram_border_color_red   = 255
+	ram_border_color_green = 255
+	ram_border_color_blue  = 255
