Added the config file to the VS project
The config file is now part of the visual studio project.

--- a/G19Tastatur Applet/G19Tastatur Applet.vcxproj.filters
+++ b/G19Tastatur Applet/G19Tastatur Applet.vcxproj.filters
@@ -59,4 +59,9 @@
       <Filter>Ressourcendateien</Filter>
     </Library>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="config.cfg">
+      <Filter>Ressourcendateien</Filter>
+    </None>
+  </ItemGroup>
 </Project>
