--- a/G19Tastatur Applet/G19Tastatur Applet.vcxproj
+++ b/G19Tastatur Applet/G19Tastatur Applet.vcxproj
@@ -103,6 +103,9 @@
   <ItemGroup>
     <Library Include="LogitechLCDLib.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="config.cfg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
