Added a basic clock
It is now possible to display the current time in hours and minutes.

--- a/G19Tastatur Applet/config.cfg
+++ b/G19Tastatur Applet/config.cfg
@@ -1,6 +1,6 @@
 ### CPU
 # Margins
-	cpu_margin_top = 15
+	cpu_margin_top  = 15
 	cpu_margin_left = 5
 
 # Font
@@ -25,7 +25,7 @@
 
 ### RAM
 # Margins
-	ram_margin_top = 190
+	ram_margin_top  = 190
 	ram_margin_left = 5
 
 # Font
@@ -41,12 +41,26 @@
 	ram_line_color_green = 0
 	ram_line_color_blue  = 0
 
-	ram_line_seperator_color_red = 0
+	ram_line_seperator_color_red   = 0
 	ram_line_seperator_color_green = 0
-	ram_line_seperator_color_blue = 0
+	ram_line_seperator_color_blue  = 0
 	ram_line_seperator_color_alpha = 0
 
 # Border in RGB
 	ram_border_color_red   = 255
 	ram_border_color_green = 255
 	ram_border_color_blue  = 255
+
+
+### Clock
+# Margins
+	clock_margin_top  = 270
+	clock_margin_left = 10
+
+# Font
+	clock_font = Arial
+
+# Text color in RGB
+	clock_text_color_red   = 255
+	clock_text_color_green = 0
+	clock_text_color_blue  = 0
