--- a/G19SystemMonitor/G19SystemMonitor.vcxproj.filters
+++ b/G19SystemMonitor/G19SystemMonitor.vcxproj.filters
@@ -71,5 +71,18 @@
     <ClInclude Include="initializeLcd.h">
       <Filter>Headerdateien\Startup check</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="G19SystemMonitor.rc">
+      <Filter>Ressourcendateien</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="icon\icon_keyboard_256.ico">
+      <Filter>Ressourcendateien</Filter>
+    </Image>
   </ItemGroup>
 </Project>
