Constants are now saved in "Constants.h"

--- a/G19SystemMonitor/G19SystemMonitor.vcxproj
+++ b/G19SystemMonitor/G19SystemMonitor.vcxproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <ClInclude Include="Cast.h" />
     <ClInclude Include="configReader.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="Convert.h" />
     <ClInclude Include="drawGui.h" />
     <ClInclude Include="Gui.h" />
