--- a/G19SystemMonitor/G19SystemMonitor.vcxproj.filters
+++ b/G19SystemMonitor/G19SystemMonitor.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClInclude Include="resource.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="G19SystemMonitor.rc">
